; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_path.c__check_dir_contents.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_path.c__check_dir_contents.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_7__*, i8*, i32 (i8*)*)* @_check_dir_contents to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_check_dir_contents(%struct.TYPE_7__* %0, i8* %1, i32 (i8*)* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32 (i8*)*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 (i8*)* %2, i32 (i8*)** %7, align 8
  %12 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %13 = call i64 @git_buf_len(%struct.TYPE_7__* %12)
  store i64 %13, i64* %9, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = call i64 @strlen(i8* %14)
  store i64 %15, i64* %10, align 8
  %16 = load i64, i64* %9, align 8
  %17 = load i64, i64* %10, align 8
  %18 = trunc i64 %17 to i32
  %19 = call i64 @GIT_ADD_SIZET_OVERFLOW(i64* %11, i64 %16, i32 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %30, label %21

21:                                               ; preds = %3
  %22 = load i64, i64* %11, align 8
  %23 = call i64 @GIT_ADD_SIZET_OVERFLOW(i64* %11, i64 %22, i32 2)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %30, label %25

25:                                               ; preds = %21
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %27 = load i64, i64* %11, align 8
  %28 = call i64 @git_buf_try_grow(%struct.TYPE_7__* %26, i64 %27, i32 0)
  %29 = icmp slt i64 %28, 0
  br i1 %29, label %30, label %31

30:                                               ; preds = %25, %21, %3
  store i32 0, i32* %4, align 4
  br label %50

31:                                               ; preds = %25
  %32 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %33 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %34 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %33, i32 0, i32 0
  %35 = load i8*, i8** %34, align 8
  %36 = load i8*, i8** %6, align 8
  %37 = call i64 @git_buf_joinpath(%struct.TYPE_7__* %32, i8* %35, i8* %36)
  %38 = icmp slt i64 %37, 0
  br i1 %38, label %39, label %40

39:                                               ; preds = %31
  store i32 0, i32* %4, align 4
  br label %50

40:                                               ; preds = %31
  %41 = load i32 (i8*)*, i32 (i8*)** %7, align 8
  %42 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %43 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %42, i32 0, i32 0
  %44 = load i8*, i8** %43, align 8
  %45 = call i32 %41(i8* %44)
  store i32 %45, i32* %8, align 4
  %46 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %47 = load i64, i64* %9, align 8
  %48 = call i32 @git_buf_truncate(%struct.TYPE_7__* %46, i64 %47)
  %49 = load i32, i32* %8, align 4
  store i32 %49, i32* %4, align 4
  br label %50

50:                                               ; preds = %40, %39, %30
  %51 = load i32, i32* %4, align 4
  ret i32 %51
}

declare dso_local i64 @git_buf_len(%struct.TYPE_7__*) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i64 @GIT_ADD_SIZET_OVERFLOW(i64*, i64, i32) #1

declare dso_local i64 @git_buf_try_grow(%struct.TYPE_7__*, i64, i32) #1

declare dso_local i64 @git_buf_joinpath(%struct.TYPE_7__*, i8*, i8*) #1

declare dso_local i32 @git_buf_truncate(%struct.TYPE_7__*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
